# Aria_Move_Rust

./: .dockerignore  .release-please-config.json  CHANGELOG.md  Cargo.toml  README.html  README.md  README.md.backup  clippy.toml  deny.toml  run.stderr.txt
.cargo/: audit.toml  config.toml
.github/: AI_PROMPTS.md  prompts
.github/workflows/: build-debian.yml  ci.yml  release-please.yml  release.yml  semantic-pr.yml
docker/: Dockerfile.build
scripts/: cross-build.sh  docker-build-in-container.sh  docker-build.sh  release-dry-run.sh
src/: app.rs  cli.rs  config.rs  errors.rs  fs_ops.rs  lib.rs  logging.rs  main.rs  output.rs  resume.rs  shutdown.rs  utils.rs
src/config/: mod.rs  paths.rs  types.rs  validate.rs  xml.rs
src/fs_ops/: atomic.rs  claim.rs  copy.rs  dir_move.rs  disk.rs  duplicate.rs  entry.rs  file_move.rs  helpers.rs  io_copy.rs  lock.rs  meta.rs  metadata.rs  mod.rs  resolve.rs  space.rs  util.rs
src/platform/: common_unix.rs  macos.rs  mod.rs  temp.rs  unix.rs  windows.rs
tests/: aria2_input.rs  atomic_unix.rs  binary_smoke.rs  cli_bare_directory.rs  cli_bare_filename.rs  cli_malformed.rs  cli_promote_file_to_dir.rs  cli_quoted_path.rs  cli_quoted_unix.rs  cli_single_arg.rs  cli_symlink_reject.rs  cli_tests.rs  cli_three_args.rs  cli_two_args.rs  config_default.rs  config_env_directory.rs  config_env_integration.rs  config_env_override.rs  config_env_relative.rs  config_flag_precedence.rs  config_validation.rs  config_xml_empty_log_file.rs  config_xml_malformed.rs  config_xml_missing_defaults.rs  config_xml_read.rs  config_xml_whitespace.rs  copy_cleanup_failure.rs  copy_metadata.rs  default_log_path.rs  disable_locks_config.rs  duplicate_length.rs  duplicate_naming.rs  file_resume.rs  fs_ops_race.rs  fs_ops_tests.rs  helpers_errors.rs  lock_eacces_unix.rs  lock_tests.rs  locks_disabled_dir_unix.rs  locks_disabled_file_unix.rs  (+26 more)
