[package]
name = "aria_move"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Dave <you@example.com>"]
description = "A robust Rust replacement for aria_move.sh — atomic moves and safe copies for completed downloads."

[dependencies]
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "local-time"] }
tracing-appender = "0.2"
walkdir = "2.3"
rayon = "1.7"
tempfile = { version = "3", optional = true } # used by tests
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.29", features = ["serialize"] }
dirs = "5"
chrono = "0.4"
libc = "0.2"

[dev-dependencies]
tempfile = "3.6"
assert_fs = "1.0"

[features]
# Enable test helpers (optional)
test-helpers = ["tempfile"]
