[package]
name = "aria_move"
version = "0.6.0"
edition = "2024"
license = "MIT"
authors = ["Dave"]
description = "A robust tool to move completed downloads for aria2c."

[dependencies]
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
tracing-appender = "0.2"
walkdir = "2.3"
rayon = "1.7"
tempfile = { version = "3", optional = true }
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.38.3", features = ["serialize"] }
dirs = "6.0.0"
chrono = "0.4"
libc = "0.2"
filetime = "0.2"
fs2 = "0.4"
ctrlc = "3.4"
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3.6"
assert_fs = "1.0"

[features]
test-helpers = ["tempfile"]
